--- a/individual-work/dvop-web/styles/_footer.scss
+++ b/individual-work/dvop-web/styles/_footer.scss
@@ -9,16 +9,7 @@
         .footer-text-container {
             text-align: center;
             &:nth-child(1) {
-                p {
-                    color: $footer-color;
-                    margin-top: .3em;
-                    font-size: clamp(.8vw, 1em);
-                    a {
-                        color: $footer-color;
-                        text-decoration: underline;
-                        font-size: clamp(.8vw, 1em);
-                    }
-                }
+                @include p-and-a-footer-setting(.3em);
             }
         }
     }
@@ -35,16 +26,7 @@
         .footer-text-container {
             text-align: center;
             &:nth-child(1) {
-                p {
-                    color: $footer-color;
-                    font-size: clamp(.8vw, 1em);
-                    margin-top: .1em;
-                    a {
-                        color: $footer-color;
-                        text-decoration: underline;
-                        font-size: clamp(.8vw, 1em);
-                    }
-                }
+                @include p-and-a-footer-setting(.1em);
             }
         }
     }
@@ -61,16 +43,7 @@
         .footer-text-container {
             text-align: center;
             &:nth-child(1) {
-                p {
-                    color: $footer-color;
-                    font-size: clamp(.8vw, 1em);
-                    margin-top: .1em;
-                    a {
-                        color: $footer-color;
-                        text-decoration: underline;
-                        font-size: clamp(.8vw, 1em);
-                    }
-                }
+                @include p-and-a-footer-setting(.1em);
             }
         }
     }
@@ -87,16 +60,7 @@
         .footer-text-container {
             text-align: center;
             &:nth-child(1) {
-                p {
-                    color: $footer-color;
-                    font-size: clamp(.8vw, 1em);
-                    margin-top: .1em;
-                    a {
-                        color: $footer-color;
-                        text-decoration: underline;
-                        font-size: clamp(.8vw, 1em);
-                    }
-                }
+                @include p-and-a-footer-setting(.1em);
             }
         }
     }
