--- a/individual-work/dvop-web/styles/_about.scss
+++ b/individual-work/dvop-web/styles/_about.scss
@@ -1,24 +1,15 @@
 @media only screen and (min-width: $width-desktop-bp) and (max-width: $max-width-desktop-bp) {
     #about {
-        margin-inline: 8em;
+        margin-inline: $desktop-margin-inline;
         .about-section {
             margin-top: 3em;
             .about-heading-container {
                 display: inline-flex;
                 text-align: start;
-                position: relative;
                 margin-bottom: 5em;
                 #heading {
-                    position: relative;
-                    text-transform: uppercase;
-                    text-shadow: -15px 5px 20px #b7b7b8;
-                    color: white;
+                    @include about-heading-mixin(5px);
                     font-size: clamp(2rem, 4.5rem, 5rem);
-                    letter-spacing: -0.05em;
-                    font-family: customFontThree;
-                    user-select: none;
-                    transition: all 0.25s ease-out;
-                    word-spacing: 5px;
                 }
             }
             .text-container {
@@ -31,23 +22,7 @@
                     font-family: customFontFour;
                     font-weight: bold;
                 }
-                p {
-                    padding-top: 2em;
-                }
-                ul {
-                    margin-top: .7em;
-                    list-style-type: none;
-                }
-                ul>li {
-                    text-indent: 5px;
-                }
-                ul>li:before {
-                    content: "-";
-                    text-indent: 5px;
-                }
-                [class^="box-"] {
-                    margin-top: 4em;
-                }
+                @include text-container-input-settings;
                 .box-1 {
                     @include about-page-box(40vh, 55vw, flex-end);
                     box-shadow: -20px 10px 20px 2px #8988882b;
@@ -85,31 +60,9 @@
                     max-width: 30em;
                     margin: 1em;
                     padding: 1em;
-                    li {
-                        display: block;
-                        list-style: none;
-                        margin-top: 1.3em;
-                    }
-                    input {
-                        padding: 7px;
-                        transition: $form-transition-dur-setting;
-                        outline: none;
-                    }
-                    input:focus {
-                        transition-duration: $form-transition-dur-setting;
-                        border-bottom: 1px solid $form-bottom-border-color;
-                        color: transparent;
-                    }
+                    @include contact-input-elements-setting;
                     .button {
-                        display: inline-block;
-                        margin-top: 1.5em;
-                        padding: 6px 20px 0px 20px;
-                        border: none;
-                        background-color: #ffffff00;
-                        border-bottom: 2px solid $form-bottom-border-color;
-                        width: 8em;
-                        transition: all 0.4s;
-                        cursor: pointer;
+                        @include contact-input-button-mixin;
                     }
                     .button span {
                         cursor: pointer;
@@ -118,12 +71,7 @@
                         transition: 0.4s;
                     }
                     .button span:after {
-                        content: 'now';
-                        opacity: 0;
-                        top: 0;
-                        right: -20px;
-                        transition: 0.4s;
-                        position: absolute;
+                        @include contact-button-hover;
                     }
                     .button:hover span {
                         padding-right: 2.04em;
@@ -142,13 +90,7 @@
                     width: 100%;
                 }
                 .input-message {
-                    @include form-border-correction;
-                    height: 10em;
-                    min-height: 8em;
-                    width: 100%;
-                    padding: 7px;
-                    transition: $form-transition-dur-setting;
-                    outline: none;
+                    @include contact-input-message;
                 }
                 .input-message:focus {
                     transition-duration: $form-transition-dur-setting;
@@ -162,7 +104,7 @@
 
 @media only screen and (min-width: $width-tablet-bp) and (max-width: $max-width-tablet-bp) {
     #about {
-        margin-inline: 4em;
+        margin-inline: $tablet-margin-inline;
     }
     .about-section {
         margin-top: 2em;
@@ -170,19 +112,9 @@
             margin-inline: 1em;
             display: inline-flex;
             text-align: start;
-            position: relative;
             margin-bottom: 1em;
             #heading {
-                position: relative;
-                text-transform: uppercase;
-                text-shadow: -10px 5px 20px #7d7d7d;
-                color: white;
-                font-size: clamp(2rem, 3rem, 5rem);
-                letter-spacing: -0.05em;
-                font-family: customFontThree;
-                user-select: none;
-                transition: all 0.25s ease-out;
-                word-spacing: 5px;
+                @include about-heading-mixin(5px);
             }
         }
         .text-container {
@@ -195,23 +127,7 @@
                 font-family: customFontFour;
                 font-weight: bold;
             }
-            p {
-                padding-top: 2em;
-            }
-            ul {
-                margin-top: .7em;
-                list-style-type: none;
-            }
-            ul>li {
-                text-indent: 5px;
-            }
-            ul>li:before {
-                content: "-";
-                text-indent: 5px;
-            }
-            [class^="box-"] {
-                margin-top: 4em;
-            }
+            @include text-container-input-settings;
             .box-1 {
                 @include about-page-box(40vh, fit-content, flex-end);
                 box-shadow: -20px 10px 20px 2px #8988882b;
@@ -249,31 +165,9 @@
                 max-width: 30em;
                 margin: 1em;
                 padding: 1em;
-                li {
-                    display: block;
-                    list-style: none;
-                    margin-top: 1.3em;
-                }
-                input {
-                    padding: 7px;
-                    transition: $form-transition-dur-setting;
-                    outline: none;
-                }
-                input:focus {
-                    transition-duration: $form-transition-dur-setting;
-                    border-bottom: 1px solid $form-bottom-border-color;
-                    color: transparent;
-                }
+                @include contact-input-elements-setting;
                 .button {
-                    display: inline-block;
-                    margin-top: 1.5em;
-                    padding: 6px 20px 0px 20px;
-                    border: none;
-                    background-color: #ffffff00;
-                    border-bottom: 2px solid $form-bottom-border-color;
-                    width: 8em;
-                    transition: all 0.4s;
-                    cursor: pointer;
+                    @include contact-input-button-mixin;
                 }
                 .button span {
                     cursor: pointer;
@@ -282,12 +176,7 @@
                     transition: 0.4s;
                 }
                 .button span:after {
-                    content: 'now';
-                    opacity: 0;
-                    top: 0;
-                    right: -20px;
-                    transition: 0.4s;
-                    position: absolute;
+                    @include contact-button-hover;
                 }
                 .button:hover span {
                     padding-right: 2.1em;
@@ -306,13 +195,7 @@
                 width: 100%;
             }
             .input-message {
-                @include form-border-correction;
-                height: 10em;
-                min-height: 8em;
-                width: 100%;
-                padding: 7px;
-                transition: $form-transition-dur-setting;
-                outline: none;
+                @include contact-input-message;
             }
             .input-message:focus {
                 transition-duration: $form-transition-dur-setting;
@@ -325,7 +208,7 @@
 
 @media only screen and (min-width: $width-iphone8-bp) and (max-width: $max-width-iphone8-bp) {
     #about {
-        margin-inline: 1em;
+        margin-inline: $mobile-dev-margin-inline;
     }
     .about-section {
         margin-top: 2em;
@@ -333,19 +216,9 @@
             margin-inline: 1em;
             display: inline-flex;
             text-align: start;
-            position: relative;
             margin-bottom: 1em;
             #heading {
-                position: relative;
-                text-transform: uppercase;
-                text-shadow: -10px 5px 20px #7d7d7d;
-                color: white;
-                font-size: clamp(2rem, 3rem, 5rem);
-                letter-spacing: -0.05em;
-                font-family: customFontThree;
-                user-select: none;
-                transition: all 0.25s ease-out;
-                word-spacing: 5px;
+                @include about-heading-mixin(5px);
             }
         }
         .text-container {
@@ -358,23 +231,7 @@
                 font-family: customFontFour;
                 font-weight: bold;
             }
-            p {
-                padding-top: 2em;
-            }
-            ul {
-                margin-top: .7em;
-                list-style-type: none;
-            }
-            ul>li {
-                text-indent: 5px;
-            }
-            ul>li:before {
-                content: "-";
-                text-indent: 5px;
-            }
-            [class^="box-"] {
-                margin-top: 4em;
-            }
+            @include text-container-input-settings;
             .box-1 {
                 @include about-page-box-general-bp;
             }
@@ -405,31 +262,9 @@
                     max-width: 30em;
                     margin: 1em;
                     padding: 1em;
-                    li {
-                        display: block;
-                        list-style: none;
-                        margin-top: 1.3em;
-                    }
-                    input {
-                        padding: 7px;
-                        transition: $form-transition-dur-setting;
-                        outline: none;
-                    }
-                    input:focus {
-                        transition-duration: $form-transition-dur-setting;
-                        border-bottom: 1px solid $form-bottom-border-color;
-                        color: transparent;
-                    }
+                    @include contact-input-elements-setting;
                     .button {
-                        display: inline-block;
-                        margin-top: 1.5em;
-                        padding: 6px 20px 0px 20px;
-                        border: none;
-                        background-color: #ffffff00;
-                        border-bottom: 2px solid $form-bottom-border-color;
-                        width: 8em;
-                        transition: all 0.4s;
-                        cursor: pointer;
+                        @include contact-input-button-mixin;
                     }
                     .button span {
                         cursor: pointer;
@@ -438,12 +273,7 @@
                         transition: 0.4s;
                     }
                     .button span:after {
-                        content: 'now';
-                        opacity: 0;
-                        top: 0;
-                        right: -20px;
-                        transition: 0.4s;
-                        position: absolute;
+                        @include contact-button-hover;
                     }
                     .button:hover span {
                         padding-right: 2.1em;
@@ -462,13 +292,7 @@
                     width: 100%;
                 }
                 .input-message {
-                    @include form-border-correction;
-                    height: 10em;
-                    min-height: 8em;
-                    width: 100%;
-                    padding: 7px;
-                    transition: $form-transition-dur-setting;
-                    outline: none;
+                    @include contact-input-message;
                 }
                 .input-message:focus {
                     transition-duration: $form-transition-dur-setting;
@@ -482,7 +306,7 @@
 
 @media only screen and (min-width: $width-general-bp) and (max-width: $max-width-general-bp) {
     #about {
-        margin-inline: 1em;
+        margin-inline: $mobile-dev-margin-inline;
     }
     .about-section {
         margin-top: 2em;
@@ -490,19 +314,9 @@
             margin-inline: 1em;
             display: inline-flex;
             text-align: start;
-            position: relative;
             margin-bottom: 1em;
             #heading {
-                position: relative;
-                text-transform: uppercase;
-                text-shadow: -10px 5px 20px #7d7d7d;
-                color: white;
-                font-size: clamp(2rem, 3rem, 5rem);
-                letter-spacing: -0.05em;
-                font-family: customFontThree;
-                user-select: none;
-                transition: all 0.25s ease-out;
-                word-spacing: 4px;
+                @include about-heading-mixin(4px);
             }
         }
         .text-container {
@@ -515,23 +329,7 @@
                 font-family: customFontFour;
                 font-weight: bold;
             }
-            p {
-                padding-top: 2em;
-            }
-            ul {
-                margin-top: .7em;
-                list-style-type: none;
-            }
-            ul>li {
-                text-indent: 5px;
-            }
-            ul>li:before {
-                content: "-";
-                text-indent: 5px;
-            }
-            [class^="box-"] {
-                margin-top: 4em;
-            }
+            @include text-container-input-settings;
             .box-1 {
                 @include about-page-box-general-bp;
                 min-height: 40vh;
@@ -568,31 +366,9 @@
                 max-width: 30em;
                 margin: 1em;
                 padding: 1em;
-                li {
-                    display: block;
-                    list-style: none;
-                    margin-top: 1.3em;
-                }
-                input {
-                    padding: 7px;
-                    transition: $form-transition-dur-setting;
-                    outline: none;
-                }
-                input:focus {
-                    transition-duration: $form-transition-dur-setting;
-                    border-bottom: 1px solid $form-bottom-border-color;
-                    color: transparent;
-                }
+                @include contact-input-elements-setting;
                 .button {
-                    display: inline-block;
-                    margin-top: 1.5em;
-                    padding: 6px 20px 0px 20px;
-                    border: none;
-                    background-color: #ffffff00;
-                    border-bottom: 2px solid $form-bottom-border-color;
-                    width: 8em;
-                    transition: all 0.4s;
-                    cursor: pointer;
+                    @include contact-input-button-mixin;
                 }
                 .button span {
                     cursor: pointer;
@@ -601,12 +377,7 @@
                     transition: 0.4s;
                 }
                 .button span:after {
-                    content: 'now';
-                    opacity: 0;
-                    top: 0;
-                    right: -20px;
-                    transition: 0.4s;
-                    position: absolute;
+                    @include contact-button-hover;
                 }
                 .button:hover span {
                     padding-right: 2.1em;
@@ -625,13 +396,7 @@
                 width: 100%;
             }
             .input-message {
-                @include form-border-correction;
-                height: 10em;
-                min-height: 8em;
-                width: 100%;
-                padding: 7px;
-                transition: $form-transition-dur-setting;
-                outline: none;
+                @include contact-input-message;
             }
             .input-message:focus {
                 transition-duration: $form-transition-dur-setting;
